# ai-token-monitor

./: CLAUDE.md  README.md  package-lock.json  package.json
.codex/: instructions.md
.github/workflows/: release.yml
docs/: README.it.md  README.ja.md  README.ko.md  README.tr.md  README.zh-CN.md  README.zh-TW.md
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  pricing.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_translate.rs  cli_translate.rs  commands.rs  lib.rs  oauth_usage.rs  url_metadata.rs  webhooks.rs
src-tauri/src/providers/: claude_code.rs  codex.rs  gemini.rs  glm.rs  kimi.rs  mod.rs  opencode.rs  pricing.rs  types.rs
src/components/: ActivityBreakdown.tsx  ActivityGraph.tsx  ActivityStats.tsx  AnalyticsSubTabs.tsx  AnalyticsSummary.tsx  CacheEfficiency.tsx  ChatMessage.tsx  ChatRoom.tsx  DailyChart.tsx  Header.tsx  Heatmap.tsx  HeatmapCell.tsx  ImageLightbox.tsx  InfoTooltip.tsx  Leaderboard.tsx  LeaderboardRow.tsx  LeaderboardUploader.tsx  MentionAutocomplete.tsx  MiniProfile.tsx  ModelBreakdown.tsx  OAuthFallbackModal.tsx  PeriodTotals.tsx  ProjectBreakdown.tsx  RichMessageContent.tsx  SalaryComparator.tsx  SettingsOverlay.tsx  ShellCommands.tsx  SourceSelector.tsx  SupportBanner.tsx  TabBar.tsx  TodaySummary.tsx  ToolUsage.tsx  Tooltip.tsx  UpdateBanner.tsx  UsageAlertBar.tsx
src/components/receipt/: Receipt.tsx
src/components/wrapped/: WrappedCards.tsx  WrappedOverlay.tsx
src/contexts/: AuthContext.tsx  MiniProfileContext.tsx  SettingsContext.tsx
src/hooks/: useBackfill.ts  useChat.ts  useChatNotification.ts  useCombinedStats.ts  useLeaderboardGrid.ts  useLeaderboardSync.ts  useOAuthUsage.ts  useProfileLinks.ts  useSnapshotUploader.ts  useTokenStats.ts  useTypingIndicator.ts  useUnreadChat.ts  useUpdater.ts  useUserActivity.ts
src/i18n/: I18nContext.tsx
src/i18n/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  tr.json  zh-CN.json  zh-TW.json
src/lib/: backfillRegistry.ts  badgeSvgTemplate.ts  chatImageUpload.ts  format.ts  openImagePopup.ts  parseMessageContent.ts  profileCache.ts  statsHelpers.ts  types.ts
src/realtime/: chatChannel.ts
src/styles/: global.css
supabase/functions/badge/: index.ts
supabase/migrations/: 20260324_provider_leaderboard.sql  20260325_add_provider.sql  20260326_chat_messages.sql  20260330_add_device_id.sql  20260402_add_opencode_provider.sql  20260402_chat_images.sql  20260403_profile_links.sql  20260411010000_add_get_user_activity.sql  20260413000000_fix_user_activity_rls.sql  20260414000000_chat_cleanup_cron.sql  20260414010000_chat_reactions_identity.sql  20260417000000_relax_chat_cleanup_cron.sql  20260417010000_drop_unused_indexes.sql  20260417020000_sync_device_snapshots_bulk.sql  20260417030000_swap_sync_device_snapshots_to_v2.sql  20260417040000_add_kimi_glm_providers.sql
supabase/tests/: sync_device_snapshots_equivalence.sql
