[package]
name = "ai-token-monitor"
version = "0.2.1"
description = "AI Token Monitor - macOS Menu Bar App"
authors = ["soul"]
edition = "2021"

[lib]
name = "ai_token_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
notify = "7"
tauri-plugin-clipboard-manager = "2.3.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
