[package]
name = "ai-token-monitor"
version = "0.15.3"
description = "AI Token Monitor - System Tray App"
authors = ["soul"]
edition = "2021"

[lib]
name = "ai_token_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
notify = "7"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
whoami = "1"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
rusqlite = { version = "0.33", features = ["bundled"] }
scraper = "0.22"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Foundation",
] }
